fix overflow

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -14,7 +14,7 @@ body {
   padding: 0;
   background-color: $c-beige;
   max-width: 100vw;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 a,
